--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 
 
 <body>
+    <ul>
+        <li class="active"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+        <li><a href="rainyNight.html"><i class="fa fa-tint" aria-hidden="true"></i> Rain</a></li>
+        <li><a href="thunderNight.html"><i class="fa fa-bolt" aria-hidden="true"></i> Thunder</a></li>
+        <li><a href="silentNight.html"><i class="fa fa-motorcycle" aria-hidden="true"></i> Vehicles</a></li>
+    </ul>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://use.fontawesome.com/e7cb172c8c.js"></script>
+
+
     <script type="text/javascript" src="js/app.js"></script>
 
     <div id="main">
@@ -33,17 +44,19 @@
         <div id="pattern"></div>
 
         <audio id="audio" loop="">
-        <source src="audios/Rain.mp3" type="audio/mp3">
+        <source src="audios/rainyNight.mp3" type="audio/mp3">
         <script src="js/music.js"></script>
       </audio>
 
         <video id="background" loop="">
-        <source src="videos/Rain.mp4" type="video/mp4">
+        <source src="videos/rainyNight.mp4" type="video/mp4">
         <script src="js/video.js"></script>
       </video>
     </div>
 
-    <div class="top-right">
+    <br>
+
+    <div class="wrapper">
         <i><a class="skip">Start Chilling.</a></i>
     </div>
 
@@ -52,6 +65,7 @@
     <script type="text/javascript" src="js/lib/jquery.cookie.min.js"></script>
     <script type="text/javascript" src="js/lib/typed.min.js"></script>
     <script type="text/javascript" src="js/portfolio.js"></script>
+    <script type="text/javascript" src="js/dropdownContent.js"></script>
 
 </body>
 
