--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
     <br>
 
     <div class="wrapper">
-        <i><a class="skip">Start Chilling.</a></i>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h1>
+            <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Welcome to NightChill.gg", "Solely Made For Chill Enviroments.", "Currently is a Work in Progress", "Enjoy!" ]'>
+                <span class="wrap"></span>
+            </a>
+        </h1>
     </div>
 
     <script type="text/javascript" src="js/lib/jquery-3.1.1.min.js"></script>
@@ -66,6 +76,7 @@
     <script type="text/javascript" src="js/lib/typed.min.js"></script>
     <script type="text/javascript" src="js/portfolio.js"></script>
     <script type="text/javascript" src="js/dropdownContent.js"></script>
+    <script type="text/javascript" src="js/writingText.js"></script>
 
 </body>
 
