--- a/rainyNight.html
+++ b/rainyNight.html
@@ -66,6 +66,7 @@
     <script type="text/javascript" src="js/lib/typed.min.js"></script>
     <script type="text/javascript" src="js/portfolio.js"></script>
     <script type="text/javascript" src="js/dropdownContent.js"></script>
+    <script type="text/javascript" src="js/writingText.js"></script>
 
 </body>
 
